<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="RingtonePickerViewModel"
            type="com.comanch.valley_wind_awake.ringtonePickerFragment.RingtonePickerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ringtone_picker_layout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/RingtoneList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/front_list_toolbar">

            <TextView
                android:id="@+id/arrow_back"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/back_button"
                android:background="@drawable/ic_baseline_keyboard_arrow_left_36"
                android:layout_gravity="start"
                />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RingtoneList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/Cancel"
            style="@style/textView_keyboard_numbers_2"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/Ok"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/guideline11" />

        <TextView
            android:id="@+id/Ok"
            style="@style/textView_keyboard_numbers_2"
            android:onClick="@{() -> RingtonePickerViewModel.setMelody()}"
            android:text="@string/ok"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/Cancel"
            app:layout_constraintTop_toBottomOf="@+id/guideline11" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/guideline8">

            <SeekBar
                android:id="@+id/seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:thumbTint="?attr/colorSecondary"
                android:progressTint="?attr/colorSecondary" />

            <TextView
                android:id="@+id/seekbar_value"
                android:layout_width="32dp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="?attr/colorSecondary"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:onClick="@{() -> RingtonePickerViewModel.addMelody()}"
            android:src="@drawable/ic_baseline_add_24"
            app:fabSize="normal"
            android:contentDescription="@string/add_ringtone"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            style="@style/ringtone_picker_fab_button" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDelete"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:fabSize="normal"
            android:contentDescription="@string/delete_melody"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            style="@style/ringtone_picker_fab_button"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="64dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="128dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="2dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="64dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>